<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/add_user_ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/add_user_ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/add_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_user_name_placeholder"
            android:inputType="textPersonName|textAutoCorrect"
            android:autofillHints="AUTOFILL_HINT_PERSON_NAME" />

        <EditText
            android:id="@+id/add_user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_user_age_placeholder"
            android:autofillHints=""
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/add_user_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_user_age_placeholder"
            android:autofillHints=""
            android:inputType="text|textAutoCorrect" />

        <Button
            android:id="@+id/add_user_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user_button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_user_ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_user_ll_top">

        <EditText
            android:id="@+id/add_user_post_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
            android:ems="10"
            android:hint="@string/add_user_post_placeholer"
            android:inputType="text|textAutoCorrect" />

        <EditText
            android:id="@+id/add_user_hobby_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
            android:ems="10"
            android:hint="@string/add_user_hobby_title_placeholder"
            android:inputType="text|textAutoCorrect" />

        <EditText
            android:id="@+id/add_user_hobby_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
            android:ems="10"
            android:hint="@string/add_user_hobby_desc_placeholder"
            android:inputType="text|textAutoCorrect" />

        <Button
            android:id="@+id/add_user_post_and_hobby_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_user_post_and_hobby_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>