<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:cardCornerRadius="6dp"
        android:elevation="5dp"
        app:cardMaxElevation="6dp"
        android:layout_marginBottom="10dp" >
        
        <RelativeLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_first_fragment"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:text="@string/app_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_age"
                android:text="@string/hello_second_fragment"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_delete" />
        </RelativeLayout>
        
    </androidx.cardview.widget.CardView>
</RelativeLayout>